<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_share_file">File Sharing</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">e-Devlet</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="barcode_close_dialog">Close</string>
    <string name="barcode_copy">Copy</string>
    <string name="barcode_result">Result</string>
    <string name="barcode_verify_common_error_message">Due to a technical problem, verification operation is not completed. Please try again later.</string>
    <string name="barcode_verify_main_title">You can verify barcoded documents created through the e-Government Gateway.</string>
    <string name="barcode_verify_or_title">or</string>
    <string name="barcode_verify_scan_error">Please scan a valid QR</string>
    <string name="barcode_verify_sub_title">You can verify your document by reading the qr code on your document using your device\'s camera or by entering the information on your document.</string>
    <string name="barcode_verify_using_camera_title">Scan QR or Barcode</string>
    <string name="barcode_verify_using_doc_info">Verify with Document Information</string>
    <string name="barcode_verify_using_qr">Scan QR Code</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="button_manual_barcode">Next</string>
    <string name="button_manual_barcode_query">Verify</string>
    <string name="button_scan_identity_card">Start Scan</string>
    <string name="button_text_announcement">Announcements</string>
    <string name="button_text_close">Close</string>
    <string name="button_text_message">Messages</string>
    <string name="button_text_service">Show</string>
    <string name="button_text_settings">Settings</string>
    <string name="button_text_url">Show</string>
    <string name="button_verification_code_submit">Verify</string>
    <string name="button_verification_resend_code">Resend</string>
    <string name="cd_button_add_photo">Add Photo</string>
    <string name="cd_button_delete_history">Delete Search History</string>
    <string name="cd_button_delete_photo">Delete Photo</string>
    <string name="cd_button_flash_on">Turn On Flash</string>
    <string name="cd_menu_share">Share</string>
    <string name="cd_menu_share_document">Share The Document</string>
    <string name="cd_title_about">Info</string>
    <string name="cd_title_contact_information">Contact Information</string>
    <string name="cd_title_favorite">Favorite</string>
    <string name="cd_title_favorite_button">Favorite The Service</string>
    <string name="cd_title_home">Home</string>
    <string name="cd_title_logout">Logout</string>
    <string name="cd_title_mrz_scan">Camera</string>
    <string name="cd_title_pdf">e-Service Document</string>
    <string name="cd_title_personal_information">Identity and Address Information</string>
    <string name="cd_title_profile">My Profile</string>
    <string name="cd_title_profile_help">Help</string>
    <string name="cd_title_search">Search</string>
    <string name="cd_title_services">e-Services</string>
    <string name="cd_title_settings">Settings</string>
    <string name="cd_title_unfavorite_button">Unfavorite The Service</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">aa34f50700ed4b8bb7841386b940c421</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connection_error_button">TRY AGAIN</string>
    <string name="connection_error_info">There is an error in your internet connection.</string>
    <string name="connection_error_title">Connection Error</string>
    <string name="copy">Copy</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="dashboard_logout_dialog_no">Cancel</string>
    <string name="dashboard_logout_dialog_text">Are you sure that you want to logout?</string>
    <string name="dashboard_logout_dialog_yes">Logout</string>
    <string name="default_notification_channel">Tüm Bildirimler</string>
    <string name="default_web_client_id">798370494975-37jbdvifbrb98bc90cqt3mqv5b0i0m09.apps.googleusercontent.com</string>
    <string name="define_fastadapter">year;owner</string>
    <string name="dialog_negative_button_text_to_open_external_link">Cancel</string>
    <string name="dialog_no_activity_external_link">Connection is not valid</string>
    <string name="dialog_no_activity_external_link_close_button">Close</string>
    <string name="dialog_positive_button_text_to_open_external_link">Open</string>
    <string name="dialog_text_to_open_external_link">You will leave the e-Devlet application and will be redirected to another web page. Responsibility of the quality of service and content is under the relevant institution.</string>
    <string name="dialog_update_check_button">Close</string>
    <string name="edit_fav">Edit</string>
    <string name="ef_camera">CAMERA</string>
    <string name="ef_content_desc_folder">Folder</string>
    <string name="ef_content_desc_image">Image</string>
    <string name="ef_done">DONE</string>
    <string name="ef_error_create_image_file">Failed to create image file</string>
    <string name="ef_error_no_camera">No camera found</string>
    <string name="ef_error_null_cursor">Oops, something went wrong!</string>
    <string name="ef_gif">GIF</string>
    <string name="ef_ltitle_permission_denied">Permission denied</string>
    <string name="ef_msg_empty_images">No images found</string>
    <string name="ef_msg_limit_images">Image selection limit</string>
    <string name="ef_msg_no_camera_permission">You have to give the app permission to use the camera to be able to take pictures</string>
    <string name="ef_msg_no_write_external_permission">Please grant storage permission to select images</string>
    <string name="ef_ok">OK</string>
    <string name="ef_permission_write_external_rationale">Allow access external storage to select images</string>
    <string name="ef_selected">%d selected</string>
    <string name="ef_selected_with_limit">%1$d/%2$d selected</string>
    <string name="ef_title_folder">Folder</string>
    <string name="ef_title_select_image">Tap to select images</string>
    <string name="error_camera_app_not_found">Camera app not found</string>
    <string name="error_failed_pick_gallery_image">Failed to pick Gallery image</string>
    <string name="error_failed_to_compress_image">Failed to compress image</string>
    <string name="error_failed_to_create_camera_image_file">Failed to create Camera image file</string>
    <string name="hint_barcode_number">Barcode Number</string>
    <string name="hint_country_code_number">Country Code</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="manual_input_info">Enter the barcode number of the document you want to verify.</string>
    <string name="ocr_scan_description">Please scan the back of your identity card by framing it.</string>
    <string name="ocr_scan_keyboard">You can fill in your card information using the form.</string>
    <string name="ocr_scan_manual">Use Keyboard</string>
    <string name="read_card_error_button">Try Again</string>
    <string name="read_card_error_header_message">Your transaction could not be completed.</string>
    <string name="read_card_error_message_result">Please apply to the General Directorate of Population and Citizenship Affairs, if you can not scan successfully even though you have done the above steps and you think there is a problem with your chip ID card.</string>
    <string name="read_card_error_title">If You Have Problems Scanning Your ID Card</string>
</resources>