<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/manual_barcode_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/txt_manual_barcode_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_major"
        android:text="@string/manual_input_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_manual_barcode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_major"
        android:hint="@string/hint_barcode_number"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/Manual_Error_Appearance"
        app:hintTextAppearance="?attr/textAppearanceCaption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_manual_barcode_header"
        style="@style/Widget.App.TextInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:id="@+id/edit_manual_barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ems="10"
            android:maxLength="50"
            android:inputType="textNoSuggestions"
            android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_manual_next"
        android:padding="@dimen/spacing_major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_major"
        android:text="@string/button_manual_barcode"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_input_manual_barcode"
        style="@style/buttonWhite"/>
</androidx.constraintlayout.widget.ConstraintLayout>
