<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/txt_phone_number_explanation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_major"
        android:text="@string/manual_input_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.card.MaterialCardView
        android:layout_gravity="center"
        android:id="@+id/profile_cv_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_high"
        app:cardCornerRadius="@dimen/radius_large"
        app:cardElevation="@dimen/plane_04"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_phone_number_explanation">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/header_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_major"
                android:text="@string/manual_input_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_country_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_major"
                android:hint="@string/hint_country_code_number"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/Manual_Error_Appearance"
                app:hintTextAppearance="?attr/textAppearanceCaption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_minor"
                android:hint="@string/hint_phone_number"
                android:layout_marginStart="@dimen/spacing_major"
                android:layout_marginEnd="@dimen/spacing_major"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/Manual_Error_Appearance"
                app:hintTextAppearance="?attr/textAppearanceCaption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_input_country_code"
                style="@style/Widget.App.TextInputLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:id="@+id/edit_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ems="10"
                    android:maxLength="50"
                    android:inputType="textNoSuggestions"
                    android:imeOptions="actionDone"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btn_manual_next"
                android:padding="@dimen/spacing_minor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_major"
                android:text="@string/button_manual_barcode"
                android:textAllCaps="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_input_phone_number"
                style="@style/buttonWhite"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <ProgressBar
        android:layout_gravity="center"
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:indeterminateTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
