<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_card_error"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="@dimen/plane_04"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.card.MaterialCardView
        android:layout_gravity="center"
        android:id="@+id/card_result_message_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_major"
        app:cardCornerRadius="@dimen/radius_large"
        app:cardElevation="@dimen/plane_04"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_card_error">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_result_icon"
                android:background="@drawable/toast_colored_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_major"
                android:layout_marginStart="@dimen/spacing_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:textAppearance="?attr/textAppearanceBody1"
                android:id="@+id/txt_result_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_major"
                android:text="@string/read_card_error_header_message"
                android:fontFamily="@font/arimo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_result_icon"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_gravity="center"
        android:id="@+id/card_extra_operation_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_major"
        app:cardCornerRadius="@dimen/radius_large"
        app:cardElevation="@dimen/plane_04"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_result_message_container">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/container_id_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_major"
            android:layout_marginStart="@dimen/spacing_major"
            android:layout_marginEnd="@dimen/spacing_major">
            <TextView
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/txt_extra_operation_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/read_card_error_title"
                android:lineSpacingExtra="2sp"
                android:fontFamily="@font/arimo_bold"/>
            <TextView
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textSize="14sp"
                android:textStyle="normal"
                android:id="@+id/txt_extra_operation_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:lineSpacingExtra="2sp"
                android:fontFamily="@font/arimo"/>
            <TextView
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textSize="14sp"
                android:textStyle="normal"
                android:id="@+id/txt_extra_operation_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/read_card_error_message_result"
                android:lineSpacingExtra="2sp"
                android:fontFamily="@font/arimo"/>
            <Button
                android:layout_gravity="end|center_vertical"
                android:id="@+id/btn_result_page_extra_operation"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_major"
                android:text="@string/read_card_error_button"
                android:textAllCaps="true"
                style="@style/buttonWhite"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
