<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_ocr_scan"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="@dimen/plane_04"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <tr.gov.turkiye.edevlet.kapisi.verification.ocr.CameraSourcePreview
        android:id="@+id/camera_source_preview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_ocr_scan">
        <tr.gov.turkiye.edevlet.kapisi.verification.ocr.GraphicOverlay
            android:id="@+id/graphics_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </tr.gov.turkiye.edevlet.kapisi.verification.ocr.CameraSourcePreview>
    <View
        android:id="@+id/view2"
        android:background="@drawable/border_background"
        android:layout_width="360dp"
        android:layout_height="225dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:layout_marginStart="@dimen/spacing_xlarge"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:srcCompat="@drawable/chip"/>
    <TextView
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="end|bottom"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/ocr_scan_description"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_ocr_scan"/>
    <View
        android:id="@+id/view3"
        android:background="@drawable/border_background_dotted"
        android:layout_width="350dp"
        android:layout_height="108dp"
        android:layout_margin="@dimen/spacing_micro"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_gravity="end|bottom"
        android:id="@+id/fab_use_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:contentDescription="@string/ocr_scan_manual"
        android:layout_marginEnd="@dimen/spacing_normal"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/keyboard"/>
    <TextView
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="end|bottom"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/ocr_scan_keyboard"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
